--- a/RecipeCSS.css
+++ b/RecipeCSS.css
@@ -13,8 +13,7 @@ h1,h2,h3,h4,h5, h6{
 }
 
 body{
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Oswald', sans-serif;
+    font-family: Ubuntu, Cantarell, 'Oswald', sans-serif;
     background-color: #fafafc;
     padding: 0px 15px;
 }
